--- a/index.html
+++ b/index.html
@@ -172,12 +172,15 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-container w3-padding">
       <h4>Tags</h4>
     </div>
-    <div class="w3-container w3-white">
-    <p><span class="w3-tag w3-black w3-margin-bottom">Cyber Security</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Programming</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">NORWAY</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">DIY</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Exploits</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Baby</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Family</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sports</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Games</span>
+    <div class="w3-container w3-white"> 
+        <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">cybersecurity</span> 
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">tutorials</span> 
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">exploits</span> 
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">kali</span> 
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">programming</span> 
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">linux</span>
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">pentesting</span> 
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">lab</span> 
     </p>
     </div>
   </div>
@@ -198,7 +201,7 @@ and is wrapped around the whole page content, except for the footer in this exam
   <a href="page2.html">
     <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
   </a>
-  <p>Aram Favela 2018 © </a></p>
+  <p> © Aram Favela 2018  </a></p>
 </footer>
 
 </body>
