--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ and is wrapped around the whole page content, except for the footer in this exam
     <ul class="topnav">
       <li><a class="active" href="#home">Home</a></li>
       <li><a href="https://enboard.co/cybertoolbox">Cyber Tool Box</a></li>
-      <li><a href="#news">Contact</a></li>
-      <li class="right"><a href="#"></a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li class="right"><img src="img/logo.png" alt=""></a></li>
     </ul>
   </div>
 
@@ -48,7 +48,7 @@ and is wrapped around the whole page content, except for the footer in this exam
       <div class="w3-row">
         <div class="w3-col m8 s12">
             <a href="blog/usd-cyber-lab.html">
-          <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>       
+          <p><button class="w3-button w3-padding-large w3-white w3-border w3-hover"><b>READ MORE »</b></button></p>       
           </div>
       </div>
     </div>
@@ -202,6 +202,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
   </a>
   <p> © Aram Favela 2018  </a></p>
+  <img src="img/logo.png" alt="">
 </footer>
 
 </body>
