--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ and is wrapped around the whole page content, except for the footer in this exam
       <li><a class="active" href="#home">Home</a></li>
       <li><a href="https://enboard.co/cybertoolbox">Cyber Tool Box</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li class="right"><img src="img/logo.png" alt=""></a></li>
+      <li class="right"></a></li>
     </ul>
   </div>
 
@@ -202,7 +202,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
   </a>
   <p> © Aram Favela 2018  </a></p>
-  <img src="img/logo.png" alt="">
+  
 </footer>
 
 </body>
