--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@ and is wrapped around the whole page content, except for the footer in this exam
   <div class="w3-card-4 w3-margin w3-white">
   <img src="img/about_aram.jpg" alt="Norway" style="width:100%">
     <div class="w3-container">
-      <h3><b>Bio & Contact</b></h3>
+      <h3><b>The Guy Behind the Shades</b></h3>
     </div>
 
     <div class="w3-container">
