--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,12 @@ and is wrapped around the whole page content, except for the footer in this exam
         blog to outline my journey.  In it you can find what I've have learned in and out of the
         classroom.  There are also white papers, tutorials, thoughts, curiosities, fascinations and ideas relating to Cyber Security
         and how it affects our society. 
-        <p><button class="w3-button w3-padding-large w3-white w3-border"><b>EMAIL ME</b></button></p>
+
+        The easiest way to get in contact is via Email.  You can also check me out on linkedin.
+
+       
+        <p><button class="w3-button w3-padding-large w3-white w3-border"><b> 
+          <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">EMAIL ME</a></b></button></p>
       </p>
     </div>
  </div>
