--- a/index.html
+++ b/index.html
@@ -115,11 +115,10 @@ and is wrapped around the whole page content, except for the footer in this exam
   <img src="img/aram.jpg" style="width:100%">
     <div class="w3-container w3-white">
       <h4><b>Aram Favela</b></h4>
-      <p>   My name is Aram and I want to live in a world where security comes first, authentication is more convenient and
-            coffee is in endless supply. When I'm not learning how the reverse engineer the latest smart toaster you 
-            can find me learning about how machine learning can be utilized to train software to detect advanced threats.
+      <p>  My name is Aram and I want to live in a world where security comes first, authentication is more convenient and
+        coffee is in endless supply. I like to solve problems, connect dots and be in constant state of learning and optimization
             <br>
-            <a href=# >read more...</a>
+            <a href="contact.html" >read more...</a>
             
             <!--
             <br> <br>
