--- a/index.html
+++ b/index.html
@@ -115,10 +115,12 @@ and is wrapped around the whole page content, except for the footer in this exam
   <img src="img/aram.jpg" style="width:100%">
     <div class="w3-container w3-white">
       <h4><b>Aram Favela</b></h4>
-      <p>  My name is Aram and I want to live in a world where security comes first, authentication is more convenient and
-        coffee is in endless supply. I like to solve problems, connect dots and be in constant state of learning and optimization
+      <p>   Hi I'm Aram and I want to live in a world where security comes first, authentication is more convenient and
+        coffee is in endless supply. I like to solve problems, connect dots and be in constant state of... 
+        
             <br>
-            <a href="contact.html" >read more...</a>
+            <a href="contact.html">
+              <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
             
             <!--
             <br> <br>
