bio - front page

--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 
     <div class="w3-container">
       <p>
-        My name is Aram and I want to live in a world where security comes first, authentication is more convenient and
-        coffee is in endless supply. I like to solve problems, connect dots and be in constant state of learning and optimization. 
+        Hi I'm Aram, a curious and driven individual.. I like to solve problems, connect dots and be in constant state of learning and optimization. 
         
                 
         The tech industry is need of strong leaders who are able to navigate the complicated technical 
