--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ and is wrapped around the whole page content, except for the footer in this exam
       <div class="w3-container">
           <h4><b>Aram Favela</b></h4>
         <p>
-          Hi I'm Aram, a curious and driven individual.. I like to solve problems, connect dots and be in constant state of learning and optimization. 
+          Hi I'm Aram, a curious and driven individual. I like to solve problems, connect dots and be in constant state of learning and optimization. 
           
                   
           The tech industry is need of strong leaders who are able to navigate the complicated technical 
