--- a/index.html
+++ b/index.html
@@ -120,15 +120,15 @@ and is wrapped around the whole page content, except for the footer in this exam
         <p>
           Hi I'm Aram, a curious and driven individual. I like to solve problems, connect dots and be in constant state of learning and optimization. 
           
-                  
+          <br>        
           The tech industry is need of strong leaders who are able to navigate the complicated technical 
           landscape while understanding business needs and considerations.  I make it my goal every day to improve my skills and knowledge 
           on both sides of the fence. To be successful in today’s innovative culture I believe every company needs to view themselves as a 
-          technology company no matter the type of work they do.  Whether it’s built into the products or used to improve internal operations 
+          technology company no matter the type of work they do.  Whether it’s built into thier products or used to improve internal operations 
           embracing technology can help companies maintain and be leaders in their respective industries. In the same way business need to 
           look at technology, technology needs to have the same conversation with security. Security can no longer be a consideration but 
-          a default. The next wave of successful companies will need to prioritize technology because if they don't they risk losing it all. 
-          I've made it my goal to help people and organizations make the transition and push their competitive advantage even further..  
+          a default. The next wave of successful companies will need to prioritize security because if they don't they risk losing it all. 
+          I've made it my goal to help people and organizations make the transition and push their competitive advantage even further.  
   
           <br> <br>
           After learning Web Design and Development during in my undergrad years I wanted to take things
